# opforjellyfin

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/src/opfor/: __main__.py  cli.py  config.py  torrent_client.py  types.py
python/src/opforjellyfin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/tests/: test_parsers.py
src/opfor/: __init__.py  cli.py  config.py  downloads.py  fsutils.py  logger.py  matcher.py  metadata.py  parsers.py  qbittorrent_client.py  scraper.py  torrent_client.py  types.py  ui.py
tests/: test_backend_dispatch.py  test_bencode.py  test_matcher.py  test_qbittorrent_client.py
