[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opforjellyfin"
version = "1.0.1"
description = "CLI tool to automate download and organisation of One Pace episodes for Jellyfin (Python port)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "opforjellyfin contributors" }]
keywords = ["jellyfin", "one-pace", "torrent", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "rich>=13.7",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
torrent = [
    # libtorrent is best installed via the system package manager on Debian/Ubuntu:
    #   sudo apt install python3-libtorrent
    # The PyPI package may not be available on every platform; this is left optional.
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
opfor = "opfor.cli:main"

[project.urls]
"Homepage" = "https://github.com/tissla/opforjellyfin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
